--- a/YOLOv9_License.ipynb
+++ b/YOLOv9_License.ipynb
@@ -169,7 +169,7 @@
       "cell_type": "code",
       "source": [
         "# Download Dataset\n",
-        "rf = Roboflow(api_key=\"VbWrD3EQz8PopNIUPTFY\")\n",
+        "rf = Roboflow(api_key=\"\")\n",
         "project = rf.workspace(\"roboflow-universe-projects\").project(\"license-plate-recognition-rxg4e\")\n",
         "version = project.version(11)\n",
         "dataset = version.download(\"yolov9\")"
